zendesk/1.1/modules/ROOT/pages/zendesk-connector-reference.adoc
= Zendesk Connector 1.1 Reference - Mule 4

== Configurations
---
[[Config]]
=== Config

==== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
|Name | String | Name for this configuration. Connectors reference the configuration with this name. | | x
| Connection a| * <<Config_ApiToken, Api Token Connection Provider>>
* <<Config_BasicAuthentication, Basic Authentication Connection Provider>>
* <<Config_Oauth2AccessCode, Oauth2 Access Code Connection Provider>>
 | The connection types to provide to this configuration. | | x
| Response Timeout a| Number |  The timeout for the request to the remote service. |  1 |
| Response Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  A time unit that qualifies the Response Timeout field |  MINUTES |
| Streaming Type a| Enumeration, one of:

** AUTO
** ALWAYS
** NEVER |  Defines whether to send the request using streaming. If the value is set to `AUTO`, the best strategy is automatically determined based on the content of the request. |  AUTO |
| Name a| String |  The identifier of this element used to reference it in other components |  | x
| Expiration Policy a| <<ExpirationPolicy>> |  Configures the minimum amount of time that a dynamic configuration instance can remain idle before Mule considers it eligible for expiration. This does not mean that the platform expires the instance at the exact moment that it becomes eligible. Mule purges the instances as appropriate. |  |
|===

==== Connection Types
[[Config_ApiToken]]
===== Api Token Connection Provider

====== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Default Headers a| Array of <<DefaultHeader>> |  |  |
| Query Parameters a| Array of <<DefaultQueryParam>> |  |  |
| Connection Timeout a| Number |  The timeout for establishing connections to the remote service |  30 |
| Connection Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  A time unit that qualifies the Connection Timeout |  SECONDS |
| Use Persistent Connections a| Boolean |  If `false`, each connection will be closed after the first request is completed. |  true |
| Max Connections a| Number |  The maximum number of outbound connections to keep open at the same time |  -1 |
| Connection Idle Timeout a| Number |  A timeout for how long a connection can remain idle before it is closed |  30 |
| Connection Idle Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  A time unit that qualifies the connection Idle Timeout |  SECONDS |
| Proxy Config a| <<Proxy>> |  Reusable configuration element for outbound connections through a proxy |  |
| Stream Response a| Boolean |  Whether or not to stream received responses, which means that processing continues as soon as all headers are parsed and the body is streamed as it is received. When enabled, the response must eventually be read since, depending on the configured buffer size, the response might not fit into memory and processing stops until space is available. |  false |
| Response Buffer Size a| Number |  The space, in bytes, for the buffer that stores the HTTP response. |  -1 |
| Base Uri a| String |  Parameter base URI. Each instance or tenant has its own base URI. |  `\https://{subdomain}.zendesk.com` |
| Authorization a| String |  Authorization |  |
| API version a| String |  API version to use. |  v2 |
| TLS Configuration a| <<Tls>> |  |  |
| Reconnection a| <<Reconnection>> |  When the application is deployed, a connectivity test is performed on all connectors. If set to true, deployment fails if the test doesn't pass after exhausting the associated reconnection strategy. |  |
|===
[[Config_BasicAuthentication]]
===== Basic Authentication Connection Provider


====== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Default Headers a| Array of <<DefaultHeader>> |  |  |
| Query Parameters a| Array of <<DefaultQueryParam>> |  |  |
| Connection Timeout a| Number |  The timeout for establishing connections to the remote service |  30 |
| Connection Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  A time unit that qualifies the Connection Timeout |  SECONDS |
| Use Persistent Connections a| Boolean |  If `false`, each connection will be closed after the first request is completed. |  true |
| Max Connections a| Number |  The maximum number of outbound connections to keep open at the same time |  -1 |
| Connection Idle Timeout a| Number |  A timeout for how long a connection can remain idle before it is closed |  30 |
| Connection Idle Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  A time unit that qualifies the connection Idle Timeout |  SECONDS |
| Proxy Config a| <<Proxy>> |  Reusable configuration element for outbound connections through a proxy |  |
| Stream Response a| Boolean |  Whether or not to stream received responses, which means that processing continues as soon as all headers are parsed and the body is streamed as it is received. When enabled, the response must eventually be read since, depending on the configured buffer size, the response might not fit into memory and processing stops until space is available. |  false |
| Response Buffer Size a| Number |  The space, in bytes, for the buffer that stores the HTTP response. |  -1 |
| Username a| String |  The username to authenticate the requests |  |
| Password a| String |  The password to authenticate the requests |  |
| Base Uri a| String |  Parameter base URI. Each instance or tenant has its own base URI. |  `\https://{subdomain}.zendesk.com` |
| API version a| String |  API version to use. |  v2 |
| TLS Configuration a| <<Tls>> |  |  |
| Reconnection a| <<Reconnection>> |  When the application is deployed, a connectivity test is performed on all connectors. If set to true, deployment fails if the test doesn't pass after exhausting the associated reconnection strategy. |  |
|===

[[Config_Oauth2AccessCode]]
===== Oauth2 Access Code Connection Provider

include::connectors::partial$oauth2-description.adoc[]

====== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Default Headers a| Array of <<DefaultHeader>> |  |  |
| Query Parameters a| Array of <<DefaultQueryParam>> |  |  |
| Connection Timeout a| Number |  The timeout for establishing connections to the remote service |  30 |
| Connection Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  A time unit that qualifies the Connection Timeout |  SECONDS |
| Use Persistent Connections a| Boolean |  If `false`, each connection will be closed after the first request is completed. |  true |
| Max Connections a| Number |  The maximum number of outbound connections to keep open at the same time |  -1 |
| Connection Idle Timeout a| Number |  A timeout for how long a connection can remain idle before it is closed |  30 |
| Connection Idle Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  A time unit that qualifies the connection Idle Timeout |  SECONDS |
| Proxy Config a| <<Proxy>> |  Reusable configuration element for outbound connections through a proxy |  |
| Stream Response a| Boolean |  Whether or not to stream received responses, which means that processing continues as soon as all headers are parsed and the body is streamed as it is received. When enabled, the response must eventually be read since, depending on the configured buffer size, the response might not fit into memory and processing stops until space is available. |  false |
| Response Buffer Size a| Number |  The space, in bytes, for the buffer that stores the HTTP response. |  -1 |
| Base Uri a| String |  Parameter base URI. Each instance or tenant has its own base URI. |  `\https://{subdomain}.zendesk.com` |
| API version a| String |  API version to use. |  v2 |
| TLS Configuration a| <<Tls>> |  |  |
| Reconnection a| <<Reconnection>> |  When the application is deployed, a connectivity test is performed on all connectors. If set to true, deployment fails if the test doesn't pass after exhausting the associated reconnection strategy. |  |
| Consumer Key a| String |  The OAuth consumer key, as registered with the service provider |  | x
| Consumer Secret a| String |  The OAuth consumer secret, as registered with the service provider |  | x
| Authorization Url a| String |  The service provider's authorization endpoint URL |  `\https://{subdomain}.zendesk.com/oauth/authorizations/new` |
| Access Token Url a| String |  The service provider's access token endpoint URL |  `\https://{subdomain}.zendesk.com/oauth/tokens` |
| Scopes a| String |  The OAuth scopes to be requested during the dance. If not provided, it defaults to those in the annotation |  read write |
| Resource Owner Id a| String |  The resource owner ID that each component should use if it isn't otherwise referenced. |  |
| Before a| String |  The name of a flow to execute before starting the OAuth dance |  |
| After a| String |  The name of a flow to execute right after an accessToken has been received |  |
| Listener Config a| String |  A reference to an `<http:listener-config />` to use to create the listener that catches the access token callback endpoint. |  | x
| Callback Path a| String |  The path of the access token callback endpoint |  | x
| Authorize Path a| String |  The path of the local http endpoint that triggers the OAuth dance |  | x
| External Callback Url a| String |  If the callback endpoint is behind a proxy or should be accessed through an indirect URL, use this parameter to tell the OAuth provider the URL to use to access the callback |  |
| Object Store a| String |  Reference to the object store used to store each resource owner ID's data. If not specified, Mule automatically provisions the default object store. |  |
|===

== Supported Operations
* <<CreateOrganizationsCreateOrUpdatejson>>
* <<CreateTicketsjson>>
* <<CreateUsersCreateOrUpdatejson>>
* <<CreateUsersjson>>
* <<GetSearchjson>>
* <<Unauthorize>>
* <<UpdateTicketsIdjson>>

== Associated Sources
* <<OnNewTicketTrigger>>
* <<OnNewUserTrigger>>
* <<OnUpdatedTicketTrigger>>


== Operations

[[CreateOrganizationsCreateOrUpdatejson]]
== Upsert an organization
`<zendesk:create-organizations-create-or-updatejson>`


Creates an organization if it doesn't already exist or updates an existing organization identified by an ID or an external ID. This operation makes an HTTP POST request to the /organizations/create_or_update.json endpoint.


=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | | x
| organizationToUpsert a| Any | Content to use. |  #[payload] |
| Config Ref a| ConfigurationProvider |  Name of the configuration used to execute this component. |  |
| Streaming Strategy a| * <<RepeatableInMemoryStream>>
* <<RepeatableFileStoreStream>>
* non-repeatable-stream | Configures how Mule processes streams. The default is to use repeatable streams. |  |
| Custom Query Parameters a| Object | Custom query parameters to include in the request. The specified query parameters are merged with the default query parameters that are specified in the configuration. |  |
| Custom Headers a| Object | Custom headers to include in the request. The specified custom headers are merged with the default headers that are specified in the configuration. |  |
| Response Timeout a| Number |  How long Mule waits for a response to complete before the request times out. |  |
| Response Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  Time unit for the *Response Timeout* field. |  |
| Streaming Type a| Enumeration, one of:

** AUTO
** ALWAYS
** NEVER |  How the connector streams request content to the remote service:


* `AUTO` (default)


Connector automatically uses the best streaming strategy based on the request content.


* `ALWAYS`


Connector always streams the request content.


* `NEVER`


Connector does not stream the request content. |  |
| Target Variable a| String |  Name of the variable that stores the operation's output. |  |
| Target Value a| String |  Expression that evaluates the operation’s output. The outcome of the expression is stored in the *Target Variable* field. |  #[payload] |
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> |  Retry strategy in case of connectivity errors. |  |
|===

=== Output

[%autowidth.spread]
|===
| *Type* a| Any
| *Attributes Type* a| <<HttpResponseAttributes>>
|===

=== For Configurations

* <<Config>>

=== Throws

* ZENDESK:BAD_REQUEST
* ZENDESK:CLIENT_ERROR
* ZENDESK:CONNECTIVITY
* ZENDESK:INTERNAL_SERVER_ERROR
* ZENDESK:NOT_ACCEPTABLE
* ZENDESK:NOT_FOUND
* ZENDESK:RETRY_EXHAUSTED
* ZENDESK:SERVER_ERROR
* ZENDESK:SERVICE_UNAVAILABLE
* ZENDESK:TIMEOUT
* ZENDESK:TOO_MANY_REQUESTS
* ZENDESK:UNAUTHORIZED
* ZENDESK:UNSUPPORTED_MEDIA_TYPE



[[CreateTicketsjson]]
== Create a ticket
`<zendesk:create-ticketsjson>`

Creates a new ticket. This operation makes an HTTP POST request to the `/tickets.json` endpoint.

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Ticket Create Content a| Any |  Content to use |  #[payload] |
| Config Ref a| ConfigurationProvider |  The name of the configuration to use to execute this component |  |
| Streaming Strategy a| * <<RepeatableInMemoryStream>>
* <<RepeatableFileStoreStream>>
* non-repeatable-stream |  Disables the repeatable stream functionality and uses non-repeatable streams to have less performance overhead, memory use, and cost. |  |
| Custom Query Parameters a| Object | Custom query parameters to include in the request. The specified query parameters are merged with the default query parameters that are specified in the configuration. |  |
| Custom Headers a| Object | Custom headers to include in the request. The specified custom headers are merged with the default headers that are specified in the configuration. |  |
| Response Timeout a| Number |  The timeout for the request to the remote service. |  |
| Response Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  A time unit that qualifies the Response Timeout field |  |
| Streaming Type a| Enumeration, one of:

** AUTO
** ALWAYS
** NEVER |  Defines whether to send the request using streaming. If the value is set to `AUTO`, the best strategy is automatically determined based on the content of the request. |  |
| Target Variable a| String |  Name of the variable that stores the operation's output |  |
| Target Value a| String |  Expression that evaluates the operation's output. The expression outcome is stored in the target variable. |  #[payload] |
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> |  A retry strategy in case of connectivity errors |  |
|===

=== Output

[%autowidth.spread]
|===
|Type |Any
| Attributes Type a| <<HttpResponseAttributes>>
|===

=== For Configurations

* <<Config>>

=== Throws

* ZENDESK:BAD_REQUEST
* ZENDESK:CLIENT_ERROR
* ZENDESK:CONNECTIVITY
* ZENDESK:INTERNAL_SERVER_ERROR
* ZENDESK:NOT_ACCEPTABLE
* ZENDESK:NOT_FOUND
* ZENDESK:RETRY_EXHAUSTED
* ZENDESK:SERVER_ERROR
* ZENDESK:SERVICE_UNAVAILABLE
* ZENDESK:TIMEOUT
* ZENDESK:TOO_MANY_REQUESTS
* ZENDESK:UNAUTHORIZED
* ZENDESK:UNSUPPORTED_MEDIA_TYPE



[[CreateUsersCreateOrUpdatejson]]
== Upsert a user
`<zendesk:create-users-create-or-updatejson>`


Creates a user if the user does not already exist or updates an existing user identified by an email address or an external ID. This operation makes an HTTP POST request to the /users/create_or_update.json endpoint.


=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | | x
| userToUpsert a| Any |  Content to use. |  #[payload] |
| Config Ref a| ConfigurationProvider |  Name of the configuration used to execute this component. |  |
| Streaming Strategy a| * <<RepeatableInMemoryStream>>
* <<RepeatableFileStoreStream>>
* non-repeatable-stream |  Configures how Mule processes streams. The default is to use repeatable streams. |  |
| Custom Query Parameters a| Object | Custom query parameters to include in the request. The specified query parameters are merged with the default query parameters that are specified in the configuration. |  |
| Custom Headers a| Object | Custom headers to include in the request. The specified custom headers are merged with the default headers that are specified in the configuration. |  |
| Response Timeout a| Number |  How long Mule waits for a response to complete before the request times out. |  |
| Response Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  Time unit for the *Response Timeout* field. |  |
| Streaming Type a| Enumeration, one of:

** AUTO
** ALWAYS
** NEVER |  How the connector streams request content to the remote service:


* `AUTO` (default)


Connector automatically uses the best streaming strategy based on the request content.


* `ALWAYS`


Connector always streams the request content.


* `NEVER`


Connector does not stream the request content. |  |
| Target Variable a| String |  Name of the variable that stores the operation's output. |  |
| Target Value a| String |  Expression that evaluates the operation’s output. The outcome of the expression is stored in the *Target Variable* field. |  #[payload] |
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> |  Retry strategy in case of connectivity errors. |  |
|===

=== Output

[%autowidth.spread]
|===
| *Type* a| Any
| *Attributes Type* a| <<HttpResponseAttributes>>
|===

=== For Configurations

* <<Config>>

=== Throws

* ZENDESK:BAD_REQUEST
* ZENDESK:CLIENT_ERROR
* ZENDESK:CONNECTIVITY
* ZENDESK:INTERNAL_SERVER_ERROR
* ZENDESK:NOT_ACCEPTABLE
* ZENDESK:NOT_FOUND
* ZENDESK:RETRY_EXHAUSTED
* ZENDESK:SERVER_ERROR
* ZENDESK:SERVICE_UNAVAILABLE
* ZENDESK:TIMEOUT
* ZENDESK:TOO_MANY_REQUESTS
* ZENDESK:UNAUTHORIZED
* ZENDESK:UNSUPPORTED_MEDIA_TYPE



[[CreateUsersjson]]
== Create a user
`<zendesk:create-usersjson>`

Creates a new user. This operation makes an HTTP POST request to the `/users.json` endpoint.

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| newUser a| Any |  Content that contains information for the new user |  #[payload] |
| Config Ref a| ConfigurationProvider |  The name of the configuration to use to execute this component |  |
| Streaming Strategy a| * <<RepeatableInMemoryStream>>
* <<RepeatableFileStoreStream>>
* non-repeatable-stream |  Disables the repeatable stream functionality and uses non-repeatable streams to have less performance overhead, memory use, and cost. |  |
| Custom Query Parameters a| Object | Custom query parameters to include in the request. The specified query parameters are merged with the default query parameters that are specified in the configuration. |  |
| Custom Headers a| Object | Custom headers to include in the request. The specified custom headers are merged with the default headers that are specified in the configuration. |  |
| Response Timeout a| Number |  The timeout for the request to the remote service. |  |
| Response Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  A time unit that qualifies the Response Timeout field |  |
| Streaming Type a| Enumeration, one of:

** AUTO
** ALWAYS
** NEVER |  Defines whether to send the request using streaming. If the value is set to `AUTO`, the best strategy is automatically determined based on the content of the request. |  |
| Target Variable a| String |  Name of the variable that stores the operation's output |  |
| Target Value a| String |  Expression that evaluates the operation's output. The expression outcome is stored in the target variable. |  #[payload] |
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> |  A retry strategy in case of connectivity errors |  |
|===

=== Output

[%autowidth.spread]
|===
|Type |Any
| Attributes Type a| <<HttpResponseAttributes>>
|===

=== For Configurations

* <<Config>>

=== Throws

* ZENDESK:BAD_REQUEST
* ZENDESK:CLIENT_ERROR
* ZENDESK:CONNECTIVITY
* ZENDESK:INTERNAL_SERVER_ERROR
* ZENDESK:NOT_ACCEPTABLE
* ZENDESK:NOT_FOUND
* ZENDESK:RETRY_EXHAUSTED
* ZENDESK:SERVER_ERROR
* ZENDESK:SERVICE_UNAVAILABLE
* ZENDESK:TIMEOUT
* ZENDESK:TOO_MANY_REQUESTS
* ZENDESK:UNAUTHORIZED
* ZENDESK:UNSUPPORTED_MEDIA_TYPE



[[GetSearchjson]]
== Search
`<zendesk:get-searchjson>`


Searches for tickets, users, and organizations based on the user's search terms and returns a list of items that match the search terms. This operation makes an HTTP GET request to the /search.json endpoint.


=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | | x
| query a| String |  Search query. |  | x
| Sort by a| String | Sort by one of the following options. If not specified, the operation sorts by relevance:


* `updated_at`


* `created_at`


* `priority`


* `status`


* `ticket_type` |  |
| Sort order a| String |

* `asc`


* `desc` | `desc` |
| Initial Page Number a| Number |  Initial page number for the first request. |  1 |
| Output Mime Type a| String |  MIME type of the payload that this operation outputs. |  |
| Config Ref a| ConfigurationProvider |  Name of the configuration used to execute this component. |  |
| Streaming Strategy a| * RepeatableInMemoryIterable
* RepeatableFileStoreIterable
* non-repeatable-iterable |  Configures how Mule processes streams. The default is to use repeatable streams. |  |
| Custom Query Parameters a| Object | Custom query parameters to include in the request. The specified query parameters are merged with the default query parameters that are specified in the configuration. |  #[null] |
| Custom Headers a| Object | Custom headers to include in the request. The specified custom headers are merged with the default headers that are specified in the configuration. |  |
| Response Timeout a| Number |  How long Mule waits for a response to complete before the request times out. |  |
| Response Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  Time unit for the *Response Timeout* field. |  |
| Streaming Type a| Enumeration, one of:

** AUTO
** ALWAYS
** NEVER |  How the connector streams request content to the remote service:


* `AUTO` (default)


Connector automatically uses the best streaming strategy based on the request content.


* `ALWAYS`


Connector always streams the request content.


* `NEVER`


Connector does not stream the request content. |  |
| Target Variable a| String |  Name of the variable that stores the operation's output. |  |
| Target Value a| String |  Expression that evaluates the operation’s output. The outcome of the expression is stored in the *Target Variable* field. |  #[payload] |
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> |  Retry strategy in case of connectivity errors. |  |
|===

=== Output

[%autowidth.spread]
|===
| *Type* a| Array of Any
|===

=== For Configurations

* <<Config>>

=== Throws

* ZENDESK:BAD_REQUEST
* ZENDESK:CLIENT_ERROR
* ZENDESK:CONNECTIVITY
* ZENDESK:INTERNAL_SERVER_ERROR
* ZENDESK:NOT_ACCEPTABLE
* ZENDESK:NOT_FOUND
* ZENDESK:SERVER_ERROR
* ZENDESK:SERVICE_UNAVAILABLE
* ZENDESK:TIMEOUT
* ZENDESK:TOO_MANY_REQUESTS
* ZENDESK:UNAUTHORIZED
* ZENDESK:UNSUPPORTED_MEDIA_TYPE



[[Unauthorize]]
== Unauthorize
`<zendesk:unauthorize>`

Deletes all the access token information of a given resource owner ID so that it's impossible to execute any operation for that user without performing the OAuth dance

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use | | x
| Resource Owner Id a| String |  The ID of the resource owner whose access should be invalidated |  |
| Config Ref a| ConfigurationProvider |  The name of the configuration to use to execute this component |  |
|===

=== For Configurations

* <<Config>>

[[UpdateTicketsIdjson]]
== Update a ticket
`<zendesk:update-tickets-idjson>`

Updates a ticket. This operation makes an HTTP PUT request to the `/tickets/{id}.json` endpoint.

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| ID a| String |  ID of the ticket to update |  | x
| Ticket Update Content a| Any |  Content that contains the update information |  #[payload] |
| Config Ref a| ConfigurationProvider |  The name of the configuration to use to execute this component |  |
| Streaming Strategy a| * <<RepeatableInMemoryStream>>
* <<RepeatableFileStoreStream>>
* non-repeatable-stream |  Disables the repeatable stream functionality and uses non-repeatable streams to have less performance overhead, memory use, and cost. |  |
| Custom Query Parameters a| Object |  Custom query parameters to include in the request. The specified query parameters are merged with the default query parameters that are specified in the configuration. |  |
| Custom Headers a| Object | Custom headers to include in the request. The specified custom headers are merged with the default headers that are specified in the configuration. |  |
| Response Timeout a| Number |  The timeout for the request to the remote service. |  |
| Response Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  A time unit that qualifies the Response Timeout field |  |
| Streaming Type a| Enumeration, one of:

** AUTO
** ALWAYS
** NEVER |  Defines whether to send the request using streaming. If the value is set to `AUTO`, the best strategy is automatically determined based on the content of the request. |  |
| Target Variable a| String |  Name of the variable that stores the operation's output |  |
| Target Value a| String |  Expression that evaluates the operation's output. The expression outcome is stored in the target variable. |  #[payload] |
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> |  A retry strategy in case of connectivity errors |  |
|===

=== Output

[%autowidth.spread]
|===
|Type |Any
| Attributes Type a| <<HttpResponseAttributes>>
|===

=== For Configurations

* <<Config>>

=== Throws

* ZENDESK:BAD_REQUEST
* ZENDESK:CLIENT_ERROR
* ZENDESK:CONNECTIVITY
* ZENDESK:INTERNAL_SERVER_ERROR
* ZENDESK:NOT_ACCEPTABLE
* ZENDESK:NOT_FOUND
* ZENDESK:RETRY_EXHAUSTED
* ZENDESK:SERVER_ERROR
* ZENDESK:SERVICE_UNAVAILABLE
* ZENDESK:TIMEOUT
* ZENDESK:TOO_MANY_REQUESTS
* ZENDESK:UNAUTHORIZED
* ZENDESK:UNSUPPORTED_MEDIA_TYPE

== Sources

[[OnNewTicketTrigger]]
== New ticket created
`<zendesk:on-new-ticket-trigger>`

Executes a Mule flow when a new ticket is created in Zendesk

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Created a| String |  Date and time value that serves as a lower bound for detecting new tickets, for example, `2020-06-30T12:41:53Z`. Tickets added before this value are not detected by the New Ticket Created source. |  |
| Config Ref a| ConfigurationProvider |  The name of the configuration to use to execute this component |  |
| Primary Node Only a| Boolean |  Determines whether to execute this source on only the primary node when running in a cluster |  |
| Scheduling Strategy a| scheduling-strategy |  Configures the scheduler that triggers the polling |  | x
| Streaming Strategy a| * <<RepeatableInMemoryStream>>
* <<RepeatableFileStoreStream>>
* non-repeatable-stream |  Disables the repeatable stream functionality and uses non-repeatable streams to have less performance overhead, memory use, and cost. |  |
| Redelivery Policy a| <<RedeliveryPolicy>> |  Defines a policy for processing the redelivery of the same message |  |
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> |  A retry strategy in case of connectivity errors |  |
|===

=== Output

[%autowidth.spread]
|===
|Type |Any
| Attributes Type a| <<HttpResponseAttributes>>
|===

=== For Configurations

* <<Config>>

[[OnNewUserTrigger]]
== New user created
`<zendesk:on-new-user-trigger>`

Executes a Mule flow when a new user is created in Zendesk

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| created a| String |  Date and time value that serves as a lower bound for detecting new users, for example, `2020-06-30T12:41:53Z`. Users added before this value are not detected by the New User Created source. |  |
| Config Ref a| ConfigurationProvider |  The name of the configuration to use to execute this component |  |
| Primary Node Only a| Boolean |  Determines whether to execute this source on only the primary node when running in a cluster |  |
| Scheduling Strategy a| scheduling-strategy |  Configures the scheduler that triggers the polling |  | x
| Streaming Strategy a| * <<RepeatableInMemoryStream>>
* <<RepeatableFileStoreStream>>
* non-repeatable-stream |  Disables the repeatable stream functionality and uses non-repeatable streams to have less performance overhead, memory use, and cost. |  |
| Redelivery Policy a| <<RedeliveryPolicy>> |  Defines a policy for processing the redelivery of the same message |  |
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> |  A retry strategy in case of connectivity errors |  |
|===

=== Output

[%autowidth.spread]
|===
|Type |Any
| Attributes Type a| <<HttpResponseAttributes>>
|===

=== For Configurations

* <<Config>>

[[OnUpdatedTicketTrigger]]
== Existing ticket updated
`<zendesk:on-updated-ticket-trigger>`

Initiates a Mule flow when an existing ticket is updated in Zendesk

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Updated a| String |  Date and time value that serves as a lower bound for detecting updated tickets, for example, `2020-06-30T12:41:53Z`. Tickets updated before this value are not detected by the Existing Ticket Updated source. |  |
| Config Ref a| ConfigurationProvider |  The name of the configuration to use to execute this component |  |
| Primary Node Only a| Boolean |  Determines whether to execute this source on only the primary node when running in a cluster |  |
| Scheduling Strategy a| scheduling-strategy |  Configures the scheduler that triggers the polling |  | x
| Streaming Strategy a| * <<RepeatableInMemoryStream>>
* <<RepeatableFileStoreStream>>
* non-repeatable-stream |  Disables the repeatable stream functionality and uses non-repeatable streams to have less performance overhead, memory use, and cost. |  |
| Redelivery Policy a| <<RedeliveryPolicy>> |  Defines a policy for processing the redelivery of the same message |  |
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> |  A retry strategy in case of connectivity errors |  |
|===

=== Output

[%autowidth.spread]
|===
|Type |Any
| Attributes Type a| <<HttpResponseAttributes>>
|===

=== For Configurations

* <<Config>>

== Types
[[DefaultHeader]]
=== Default Header

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Key a| String |  |  | x
| Value a| String |  |  | x
|===

[[DefaultQueryParam]]
=== Default Query Param

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Key a| String |  |  | x
| Value a| String |  |  | x
|===

[[Proxy]]
=== Proxy

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Host a| String |  |  | x
| Port a| Number |  |  | x
| Username a| String |  |  |
| Password a| String |  |  |
| Non Proxy Hosts a| String |  |  |
|===

[[Tls]]
=== Tls

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Enabled Protocols a| String | A comma-separated list of protocols enabled for this context. |  |
| Enabled Cipher Suites a| String | A comma-separated list of cipher suites enabled for this context. |  |
| Trust Store a| <<TrustStore>> |  |  |
| Key Store a| <<KeyStore>> |  |  |
| Revocation Check a| * <<StandardRevocationCheck>>
* <<CustomOcspResponder>>
* <<CrlFile>> |  |  |
|===

[[TrustStore]]
=== Trust Store

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Path a| String | The location (which will be resolved relative to the current classpath and file system, if possible) of the truststore. |  |
| Password a| String | The password used to protect the truststore. |  |
| Type a| String | The type of store used. |  |
| Algorithm a| String | The algorithm used by the truststore. |  |
| Insecure a| Boolean | If true, no certificate validations will be performed, rendering connections vulnerable to attacks. Use at your own risk. |  |
|===

[[KeyStore]]
=== Key Store

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Path a| String | The location (which will be resolved relative to the current classpath and file system, if possible) of the keystore. |  |
| Type a| String | The type of store used. |  |
| Alias a| String | When the keystore contains many private keys, this attribute indicates the alias of the key that should be used. If not defined, the first key in the file will be used by default. |  |
| Key Password a| String | The password used to protect the private key. |  |
| Password a| String | The password used to protect the keystore. |  |
| Algorithm a| String | The algorithm used by the keystore. |  |
|===

[[StandardRevocationCheck]]
=== Standard Revocation Check

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Only End Entities a| Boolean | Only verify the last element of the certificate chain. |  |
| Prefer Crls a| Boolean | Try CRL instead of OCSP first. |  |
| No Fallback a| Boolean | Do not use the secondary checking method (the one not selected before). |  |
| Soft Fail a| Boolean | Avoid verification failure when the revocation server can not be reached or is busy. |  |
|===

[[CustomOcspResponder]]
=== Custom Ocsp Responder

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Url a| String | The URL of the OCSP responder. |  |
| Cert Alias a| String | Alias of the signing certificate for the OCSP response (must be in the truststore), if present. |  |
|===

[[CrlFile]]
=== Crl File

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Path a| String | The path to the CRL file. |  |
|===

[[Reconnection]]
=== Reconnection

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Fails Deployment a| Boolean | When the application is deployed, a connectivity test is performed on all connectors. If set to true, deployment fails if the test doesn't pass after exhausting the associated reconnection strategy. |  |
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> | The reconnection strategy to use. |  |
|===

[[Reconnect]]
=== Reconnect

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Frequency a| Number | How often in milliseconds to reconnect |  |
| Count a| Number | How many reconnection attempts to make. |  |
|===

[[ReconnectForever]]
=== Reconnect Forever

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Frequency a| Number | How often in milliseconds to reconnect |  |
|===

[[ExpirationPolicy]]
=== Expiration Policy

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Max Idle Time a| Number | A scalar time value for the maximum amount of time a dynamic configuration instance should be allowed to be idle before it's considered eligible for expiration |  |
| Time Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS | A time unit that qualifies the maxIdleTime attribute |  |
|===

[[HttpResponseAttributes]]
=== Http Response Attributes

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Status Code a| Number |  |  | x
| Headers a| Object |  |  | x
| Reason Phrase a| String |  |  | x
|===

[[RepeatableInMemoryStream]]
=== Repeatable In Memory Stream

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Initial Buffer Size a| Number | The amount of memory that will be allocated to consume the stream and provide random access to it. If the stream contains more data than can be fit into this buffer, then the buffer expands according to the bufferSizeIncrement attribute, with an upper limit of maxInMemorySize. |  |
| Buffer Size Increment a| Number | This is by how much the buffer size expands if it exceeds its initial size. Setting a value of zero or lower means that the buffer should not expand, meaning that a STREAM_MAXIMUM_SIZE_EXCEEDED error is raised when the buffer gets full. |  |
| Max Buffer Size a| Number | The maximum amount of memory to use. If more than that is used then a STREAM_MAXIMUM_SIZE_EXCEEDED error is raised. A value lower than or equal to zero means no limit. |  |
| Buffer Unit a| Enumeration, one of:

** BYTE
** KB
** MB
** GB | The unit in which all these attributes are expressed |  |
|===

[[RepeatableFileStoreStream]]
=== Repeatable File Store Stream

File store repeatable streams require buffering, and there are different buffering strategies. Mule keeps a portion of contents in memory. If the stream contents are larger than the configured buffer size, Mule backs up the buffer’s content to disk and then clears the memory.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| In Memory Size a| Number | Defines the maximum memory that the stream should use to keep data in memory. If more than that is consumed content on the disk is buffered. |  |
| Buffer Unit a| Enumeration, one of:

** BYTE
** KB
** MB
** GB | The unit in which maxInMemorySize is expressed |  |
|===

[[RedeliveryPolicy]]
=== Redelivery Policy

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Max Redelivery Count a| Number | The maximum number of times a message can be redelivered and processed unsuccessfully before triggering process-failed-message |  |
| Message Digest Algorithm a| String | The secure hashing algorithm to use. If not set, the default is SHA-256. |  |
| Message Identifier a| <<RedeliveryPolicyMessageIdentifier>> | Defines which strategy is used to identify the messages. |  |
| Object Store a| ObjectStore | Reference to the object store to use to store each resource owner ID's data. If not specified, Mule automatically provisions the default object store. |  |
|===

[[RedeliveryPolicyMessageIdentifier]]
=== Redelivery Policy Message Identifier

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Use Secure Hash a| Boolean | Whether to use a secure hash algorithm to identify a redelivered message. |  |
| Id Expression a| String | Defines one or more expressions to use to determine when a message has been redelivered. This property may only be set if useSecureHash is false. |  |
|===

== See Also

* xref:connectors::introduction/introduction-to-anypoint-connectors.adoc[Introduction to Anypoint Connectors]
* https://help.mulesoft.com[MuleSoft Help Center]
